--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ set -g allow-rename off
 set-window-option -g mode-keys vi
 
 # Move to last active windows. (Moving to last active pane is not supported.)
-bind-key l last-window
+# bind-key l last-window
 
 # Join Windows (Pane Movement)
 bind g command-prompt -p "Join pane from:" "join-pane -s '%%'"  # Move pane from another window
